--- a/EurekaService/src/main/resources/application.properties
+++ b/EurekaService/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=8761
-spring.application.name=eureka-service
+spring.application.name=EUREKA-SERVICE
 
 # eureka setup
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-
 
 # debug info
 logging.level.com.netflix.eureka=DEBUG
