--- a/NotificationService/src/main/resources/application.properties
+++ b/NotificationService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 spring.application.name=NOTIFICATION-SERVICE
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+#eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
@@ -10,5 +10,8 @@ eureka.instance.hostname=localhost
 # debug info
 logging.level.com.netflix.eureka=DEBUG
 logging.level.com.netflix.discovery=DEBUG
+logging.level.org.springframework.cloud.loadbalancer=DEBUG
+
+
 
 
