--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.application.name=USER-SERVICE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+#eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
